[workspace]
members = [
    "old",
    "old/add-one",
    "old/adder",
    "old/hw",
    "old/hw/pm",

    "hello_world",

    "crate_misc",
    "crate_yew_example",
    "crate_actix_study",
    "crate_gtk_example",
    "crate_qt_example",
    "crate_orbtk_example",
    "crate_tokio_example",
    "crate_shaku_example",

    "study_enums",
    "study_from_to",
    "study_reflect",
    "study_macro",
    "study_macro/hello_macro",
    "study_macro/hello_macro_derive",
    "study_mod",
    "study_lib/rust-lib-test-1",
    "study_lib/rust-lib-test-2",
    "study_lib/rust-lib-test-3",
    "study_async",
    "study_error_handle",
    "study_smart_pointer",
    "study_lifecycle",
    "study_std/io-fs-example",
    "study_std/async-study",
    "study_std/test-example",
    "study_std/misc",
    "study_iter",
    "study_variables",
    "study_trait_object",

    "rust_data_structure",
    "curry_function",
    "gussing_game",
    "minigrep"
]
