[workspace]
members = [
    "miscs/old",
    "miscs/old/add-one",
    "miscs/old/adder",
    "miscs/old/hw",
    "miscs/old/hw/pm",
    "miscs/curry_function",
    "miscs/gussing_game",
    "miscs/minigrep",
    "miscs/hello_world",
    "miscs/gussing_game",
    "miscs/rust-graphql-juniper-actix-diesel-postgres",
    "miscs/rust_vue_template",

    "crates/crate_misc",
    "crates/crate_yew_example",
    "crates/crate_actix_study",
    "crates/crate_gtk_example",
    "crates/crate_qt_example",
    "crates/crate_orbtk_example",
    "crates/crate_tokio_example",
    "crates/crate_shaku_example",

    "study/study_enums",
    "study/study_from_to",
    "study/study_reflect",
    "study/study_macro",
    "study/study_macro/hello_macro",
    "study/study_macro/hello_macro_derive",
    "study/study_mod",
    "study/study_lib/rust-lib-test-1",
    "study/study_lib/rust-lib-test-2",
    "study/study_lib/rust-lib-test-3",
    "study/study_async",
    "study/study_error_handle",
    "study/study_smart_pointer",
    "study/study_lifecycle",
    "study/study_std/io-fs-example",
    "study/study_std/async-study",
    "study/study_std/test-example",
    "study/study_std/misc",
    "study/study_iter",
    "study/study_variables",
    "study/study_trait_object",
    "study/study_cross_compile",

    "rust_data_structure"

]
