[workspace]
members = [
    "miscs/old",
    "miscs/old/add-one",
    "miscs/old/adder",
    "miscs/old/hw",
    "miscs/old/hw/pm",
    "miscs/curry_function",
    "miscs/gussing_game",
    "miscs/minigrep",
    "miscs/hello_world",
    "miscs/gussing_game",
    "miscs/rust-graphql-juniper-actix-diesel-postgres",
    "miscs/rust_vue_template",

    "crates/crate_misc",
    "crates/crate_actix_study",
    "crates/crate_gtk_example",
    "crates/crate_qt_example",
    "crates/crate_orbtk_example",
    "crates/crate_tokio_example",
    "crates/crate_shaku_example",

    "crates/yew/crate_yew_example",
    "crates/yew/pub_sub",

    "crates/diesel/diesel_example_1",

    "crates/ndarray/ndarray_example",

    "study/study_async",
    "study/study_closure",

    "study/study_enums",
    "study/study_error_handle",
    "study/study_from_to",
    "study/study_reflect",
    "study/study_macro",
    "study/study_macro/hello_macro",
    "study/study_macro/hello_macro_derive",
    "study/study_mod",
    "study/study_lib/rust-lib-test-1",
    "study/study_lib/rust-lib-test-2",
    "study/study_lib/rust-lib-test-3",
    "study/study_smart_pointer",
    "study/study_lifecycle",
    "study/study_std/io-fs-example",
    "study/study_std/async",
    "study/study_std/thread",
    "study/study_std/test-example",
    "study/study_std/misc",
    "study/study_iter",
    "study/study_variables",

    "study/study_trait_object",
    "study/study_cross_compile",

    "study/study_feature",

    "study/study_ffi/ffi_opencv",
    "study/study_ffi/libgiit2",

    "algorithms",
    "data_structure",

    "design_pattern",
    "leetcode",

    "utils_rust"

]
