[package]
name = "curry_function"
version = "0.1.0"
authors = ["r31oad3d <r31oad3d@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.19"
quote = "1.0.7"

[dependencies.syn]
version = "1.0.35"
features = ["full"]

[lib]
proc-macro = true
