[package]
name = "rust-async"
version = "0.1.0"
authors = ["r31oad3d <r31oad3d@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
log4rs = "0.10.0"
futures = { version = "^0.3", features = ["compat"] }
hyper = "0.12.9"


[[bin]]
name = "test1"
path = "src/test/test1.rs"

