[package]
name = "tokio-example"
version = "0.1.0"
authors = ["r31oad3d <r31oad3d@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.5"
[[bin]]
name = "bin1"
path = "src/bin1.rs"
