[package]
name = "study_feature"
version = "0.1.0"
authors = ["r31oad3d <r31oad3d@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.7", optional = true}

[features]
default = []
f1 = []
f2 = ["rand"]
