[package]
name = "study_reflect"
version = "0.1.0"
authors = ["r31oad3d <r31oad3d@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.7"
syn = "1.0.35"
hello_macro = {path = "../study_macro/hello_macro" }
hello_macro_derive = {path = "../study_macro/hello_macro_derive" }


