[package]
name = "pub_sub"
version = "0.1.0"
authors = ["r31oad3d <r31oad3d@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
wasm-logger = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
yew = "0.17.3"
